--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# version: '3.8'
+version: '3.8'
 
 services:
   db:
@@ -23,16 +23,17 @@ services:
       - "3000:3000"
     depends_on:
       - db
+   
+    volumes:
+      - ./backend-nest:/usr/src/app
+      - /usr/src/app/node_modules
+ 
     environment:
       DATABASE_HOST: db
       DATABASE_PORT: 3306
       DATABASE_USER: root
       DATABASE_PASSWORD: root
       DATABASE_NAME: iga_db
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 10
 
   frontend:
     build: ./frontend
@@ -40,5 +41,10 @@ services:
     restart: always
     ports:
       - "5173:5173"
+   
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+  
     depends_on:
       - backend
