--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,12 @@ services:
     volumes:
       - ./mysql_data:/var/lib/mysql
       - ./init-db:/docker-entrypoint-initdb.d
+    
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   backend:
     build: ./backend-nest
@@ -21,9 +27,11 @@ services:
     restart: always
     ports:
       - "3000:3000"
-    depends_on:
-      - db
    
+    depends_on:
+      db:
+        condition: service_healthy
+    
     volumes:
       - ./backend-nest:/usr/src/app
       - /usr/src/app/node_modules
@@ -41,10 +49,8 @@ services:
     restart: always
     ports:
       - "5173:5173"
-   
     volumes:
       - ./frontend:/app
       - /app/node_modules
-  
     depends_on:
       - backend
